# ai-migration

./: .gitignore  .mergify.yml  AGENTS.md  CODE_MIGRATION_SIMPLE.md  DETERMINISTIC_SPLIT_SUMMARY.md  HAIKU_FINAL_EXECUTION_TASKS.md  HAIKU_WORK_REVIEW_AND_CORRECTIONS.md  PR_MIGRATION_HANDOFF.md  README.md  RTNEO_TO_AI_CODE_MIGRATION_MAP.md  SPLIT_EXEC_SPEC.yaml  TRANSCRIPT_SPLIT_PLAN.md  WASTE_FORECASTING_PROJECTS_MAP.md  branch_state_clients_imessage_sender_project.json  branch_state_clients_qbsf.json  branch_state_clients_rtneo_docs.json  branch_state_clients_rtneo_mock.json  branch_state_clients_rtneo_ui_docs.json  branch_state_clients_rtneo_ui_forecast_ui.json  branch_state_clients_rtneo_ui_mytko.json  branch_state_clients_salesvocieanalytics.json  branch_state_tools_agentos.json  branch_state_tools_autotester.json  branch_state_tools_claudecodeproxy.json  branch_state_tools_codeinterpreterzip2localfolder.json  branch_state_tools_fastwhisper.json  branch_state_tools_genai_coder.json  branch_state_tools_genaicodeupdater.json  branch_state_tools_groq_whisperer.json  branch_state_tools_mycodetree2llm.json  branch_state_tools_scheduler.json  branch_state_tools_taskflow.json  branch_state_tools_whisper_infinity_bot.json  codex_feedback_137.md  codex_feedback_146.md  git_push_wrapper.sh  progress.md  split_transcript.sh
projects/agentos/: .gitignore  AGENTS.md  README.md  final_docs_summary.md  progress.md  pyproject.toml  pytest.ini
projects/agentos/archive/: PRD_v1.6-final_RU_incomplete.md  PRD_v1.6_patches.md  critical_fixes_revised.md  dr_task1_codex.md  dr_task2_glm.md  dr_task3_repos.md  executive_summary.md  implementation_fixes.md  prd_v1.5_improved.md  prd_v15_providers_corrected.md  prd_v16_patches-2.md  prd_v16_patches-3_alt.md  saturday_prep_checklist_old.md  step1_prompt.md  step2_prompt.md  strategic_guidance.md  validation_what_works.md  week0_final_protocol_old.md
projects/agentos/docs/: SESSION_HANDOFF.md  START_HERE.md
projects/agentos/features/: ccc_adapter.feature  decision_card.feature  tracker_aliases.feature  tracker_automation.feature  tracker_ccusage.feature  tracker_cli.feature
projects/agentos/logs/: W0-CHP-3_window_audit.json  W0-MITM-1_window_audit.json  usage.jsonl
projects/agentos/plans/: 001_next_session.plan.md  002_long_session.plan.md  005_long_session.plan.md  006_polishing-next.plan.md  007_week0_execution.plan.md  2025-10-20_next_session.plan.md  2025-10-21_quick_wins.plan.md  2025-11-05_tracker-cli.plan.md  2025-11-05_tracker-next.plan.md  2025-11-06_agentos_r36.plan.md  2025-11-06_ccc-behave-docs.plan.md  2025-11-06_cross-repo-sync.plan.md
projects/agentos/prototype-dashboard/: dashboard.py
projects/agentos/scripts/: tracker-aliases.sh  usage_ingest.py  usage_summary.py
projects/agentos/tracker/: pyproject.toml
projects/ai-flow/: README.md  ai_flow.py  pyproject.toml
projects/ai-flow/tests/: test_cli_e2e.py
projects/taskflow/: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  agents-md-guide.md  auth.py  config.py  config_manager.py  context_bridge.py  docker-compose.yml  git_utils.py  init.sh  path_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_bot.py  setup.sh  task_tracker.py  template_gallery.py  template_processor.py  template_system.py  web_server.py
projects/taskflow/.fileselect/: files_selection.json  folders_selection.json
projects/taskflow/api/: __init__.py  tasks.py  templates.py
projects/taskflow/bot/: .env.example  README.md  bot.py  claude_runner.py  config.py  scheduled_runner.py  task_executor.py  templates.json
projects/taskflow/cli/: task_cli.py
projects/taskflow/dashboard/: analytics.js  app.js  components.js  data_manager.js  index.html  reports.js  style.css
projects/taskflow/docs/: configuration.md  docker.md  end-to-end-workflow.md  implementation-progress.md  setup.md  sync.md  telegram-bot.md  template-gallery.md  testing.md  workflow-example.md
projects/taskflow/mobile-form/: index.html  main.js  style.css  sw.js
projects/taskflow/scripts/: README.md  setup.py  sync.py
projects/taskflow/src/: __init__.py  auth.py  cli.py  config.py  database.py  main.py
projects/taskflow/static/: base.js  dashboard.js  mobile-manifest.json  mobile-sw.js  style.css
projects/taskflow/templates/: base.html  dashboard.html  gallery.json  mobile.html
projects/taskflow/tests/: conftest.py  test_api.py  test_auth.py  test_basic.py  test_cli.py  test_config_manager.py  test_context_bridge.py  test_git_service.py  test_git_utils.py  test_integration.py  test_task_service.py  test_template_gallery.py  test_template_service.py  test_template_system.py  test_templates_api.py
projects/taskflow/tools/: execute-task.sh  prepare-task.sh  run.sh
projects/taskflow/utils/: __init__.py  config_manager.py  errors.py  logging_config.py
projects/taskflow/webui/: results_viewer.py
(+5176 files in other folders)
