[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS integration bridge"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "behave>=1.2.6",
]
ccc = [
    "cryptography>=41.0.0",
]

[tool.setuptools.packages.find]
include = ["agentos*"]
exclude = ["tests*"]
