[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-flow"
version = "0.1.0"
description = "CLI for AI project scaffolding (projects, branches, steps)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ai-flow = "ai_flow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
